--- a/Tienda/src/main/resources/templates/index.html
+++ b/Tienda/src/main/resources/templates/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns="http://www.w3.org/1999/xhtml">
-    <head th:replace="~{layout/plantilla :: head}">
+    <head th:replace="~{layout/Plantilla :: head}">
         <title>TechShop</title>
        
     </head>
     <body>
-        <header th:replace="~{layout/plantilla :: header}"/>
+        <header th:replace="~{layout/Plantilla :: header}"/>
     
-        <footer th:replace="~{layout/plantilla :: footer}"/>
+        <footer th:replace="~{layout/Plantilla :: footer}"/>
     </body>
 </html>
 
